# kuru-sdk-py

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: publish.yml
docs/: MARKET_MAKING.md
examples/: async_mem_cache_usage.py  cancel_orders.py  config_examples.py  deposit_withdraw.py  eip7701_auth.py  eip7702_revoke.py  get_exchange_orderbook_ws.py  get_orderbook_rpc_ws.py  get_orderbook_ws.py  order_callback_example.py  orderbook_orders_executor.py  place_many_orders.py  simple_market_making_bot.py  taker_bot.py  test_orderbook_integration.py  test_rpc_ws.py  verify_eip7702_auth.py
hummingbot_connector/kuru/: __init__.py  kuru_api_order_book_data_source.py  kuru_api_user_stream_data_source.py  kuru_auth.py  kuru_constants.py  kuru_exchange.py  kuru_order_book.py  kuru_utils.py  kuru_web_utils.py
kuru_sdk_py/: __init__.py  client.py  config_defaults.py  configs.py  exceptions.py
kuru_sdk_py/abis/: mm_entrypoint.json
kuru_sdk_py/executor/: orders_executor.py
kuru_sdk_py/feed/: base_ws.py  exchange_ws.py  orderbook.py  orderbook_ws.py  rpc_ws.py
src/: client.py  config_defaults.py  configs.py
tests/: test_async_mem_cache.py  test_base_ws.py  test_client_config.py  test_configs.py  test_exceptions.py  test_exchange_ws_reconnect.py  test_executor.py  test_hummingbot_connector.py  test_nonce_manager.py  test_order_cleanup.py  test_order_fills.py  test_orderbook_ws_reconnect.py  test_reconciliation.py  test_rpc_ws.py  test_transaction_timeout.py  test_user.py  test_ws_utils.py
(+21 files in other folders)
